HART communication + main form hart device continuous polling

--- a/Communication.HartLite/Communication.HartLite.csproj
+++ b/Communication.HartLite/Communication.HartLite.csproj
@@ -44,12 +44,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Commands\HARTCommand.cs" />
+    <Compile Include="Commands\HART_Simulate_Current_Command.cs" />
+    <Compile Include="Commands\HART_Trim_20mA_Command.cs" />
+    <Compile Include="Commands\HART_Trim_4mA_Command.cs" />
     <Compile Include="Commands\HART_Zero_Command.cs" />
+    <Compile Include="ConverrtHelpers.cs" />
     <Compile Include="IAddress.cs" />
-    <Compile Include="Commands\IHARTCommand.cs" />
     <Compile Include="LongAddress.cs" />
     <Compile Include="SendingCommandHandler.cs" />
-    <Compile Include="Commands\HARTCommand.cs" />
+    <Compile Include="HARTDatagram.cs" />
     <Compile Include="ISerialPortWrapper.cs" />
     <Compile Include="OpenResult.cs" />
     <Compile Include="CloseResult.cs" />
