--- a/benchGUI/App.config
+++ b/benchGUI/App.config
@@ -52,6 +52,16 @@
         <conversionPattern value="%date{ISO8601} %level %thread %type - %message%newline"/>
       </layout>
     </appender>
+	  <appender name="HARTAppender" type="log4net.Appender.FileAppender">
+		  <file value="logHARTCommunication.txt"/>
+		  <ImmediateFlush value="true"/>
+		  <appendToFile value="false"/>
+		  <maximumFileSize value="2KB"/>
+		  <maxSizeRollBackups value="2"/>
+		  <layout type="log4net.Layout.PatternLayout">
+			  <conversionPattern value="%date{ISO8601} %level %thread %type - %message%newline"/>
+		  </layout>
+	  </appender>
 	<appender name="CPC6000Appender" type="log4net.Appender.FileAppender">
       <file value="logCPC6000.txt"/>
       <ImmediateFlush value="true"/>
@@ -89,6 +99,10 @@
       <appender-ref ref="CPC6000CommunicationAppender"/>
       <appender-ref ref="CommunicationConsoleAppender"/>
     </logger>
+	  <logger name="HART">
+		  <level value="DEBUG"/>
+		  <appender-ref ref="HARTAppender"/>
+	  </logger>
 	<logger name="WorkBench.TestEquipment.CPC6000.CPC6000">
 		<level value="DEBUG"/>
 		<appender-ref ref="CPC6000Appender"/>
