--- a/benchGUI/App.config
+++ b/benchGUI/App.config
@@ -59,7 +59,7 @@
 		  <maximumFileSize value="2KB"/>
 		  <maxSizeRollBackups value="2"/>
 		  <layout type="log4net.Layout.PatternLayout">
-			  <conversionPattern value="%date{ISO8601} %level %thread %type - %message%newline"/>
+			  <conversionPattern value="%level %thread %type - %date{ISO8601} %message%newline"/>
 		  </layout>
 	  </appender>
 	<appender name="CPC6000Appender" type="log4net.Appender.FileAppender">
