stable working master state machine

--- a/Communication.HartLite/Communication.HartLite.csproj
+++ b/Communication.HartLite/Communication.HartLite.csproj
@@ -44,25 +44,30 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CommandResults\HART_Result_015_Read_Device_Information.cs" />
+    <Compile Include="CommandResults\HART_Result_044_Write_Primary_Variable_Units.cs" />
     <Compile Include="CommandResults\HART_Result_109_Burst_Mode_Control.cs" />
-    <Compile Include="CommandResults\HART_Result_13_Tag_Descriptor_Date.cs" />
-    <Compile Include="CommandResults\HART_Result_18_Write_Tag_Descriptor_Date.cs" />
-    <Compile Include="CommandResults\HART_Result_20_Read_Long_Tag.cs" />
-    <Compile Include="CommandResults\HART_Result_22_Write_Long_Tag.cs" />
-    <Compile Include="CommandResults\HART_Result_Zero_Command_v5.cs" />
-    <Compile Include="CommandResults\HART_Result_Zero_Command_v7.cs" />
+    <Compile Include="CommandResults\HART_Result_013_Tag_Descriptor_Date.cs" />
+    <Compile Include="CommandResults\HART_Result_018_Write_Tag_Descriptor_Date.cs" />
+    <Compile Include="CommandResults\HART_Result_020_Read_Long_Tag.cs" />
+    <Compile Include="CommandResults\HART_Result_022_Write_Long_Tag.cs" />
+    <Compile Include="CommandResults\HART_Result_035_Write_PrimaryVariableRangeValues.cs" />
+    <Compile Include="CommandResults\HART_Result_000_Zero_Command_v5.cs" />
+    <Compile Include="CommandResults\HART_Result_000_Zero_Command_v7.cs" />
     <Compile Include="CommandResults\IReadUniqueIdetifierCommand.cs" />
     <Compile Include="Commands\HARTCommand.cs" />
+    <Compile Include="Commands\HART_015_Read_Device_Information.cs" />
+    <Compile Include="Commands\HART_044_Write_Primary_Variable_Units.cs" />
     <Compile Include="Commands\HART_109_Burst_Mode_Control.cs" />
-    <Compile Include="Commands\HART_13_Read_Tag_Descriptor_Date.cs" />
-    <Compile Include="Commands\HART_18_Write_Tag_Descriptor_Date.cs" />
-    <Compile Include="Commands\HART_20_ReadLongTag.cs" />
-    <Compile Include="Commands\HART_22_Write_Long_Tag.cs" />
-    <Compile Include="Commands\HART_35_Write_PrimaryVariableRangeValues.cs" />
-    <Compile Include="Commands\HART_40_Simulate_Current_Command.cs" />
-    <Compile Include="Commands\HART_Trim_20mA_Command.cs" />
-    <Compile Include="Commands\HART_Trim_4mA_Command.cs" />
-    <Compile Include="Commands\HART_Zero_Command.cs" />
+    <Compile Include="Commands\HART_013_Read_Tag_Descriptor_Date.cs" />
+    <Compile Include="Commands\HART_018_Write_Tag_Descriptor_Date.cs" />
+    <Compile Include="Commands\HART_020_ReadLongTag.cs" />
+    <Compile Include="Commands\HART_022_Write_Long_Tag.cs" />
+    <Compile Include="Commands\HART_035_Write_PrimaryVariableRangeValues.cs" />
+    <Compile Include="Commands\HART_040_Simulate_Current_Command.cs" />
+    <Compile Include="Commands\HART_046_Trim_Trim_Loop_Current_Gain.cs" />
+    <Compile Include="Commands\HART_045_Trim_Loop_Current_Zero.cs" />
+    <Compile Include="Commands\HART_000_Zero_Command.cs" />
     <Compile Include="CommonTables\001_Expanded_Device_Type_Code.cs" />
     <Compile Include="CommonTables\009_Burst_Mode_Control_Code.cs" />
     <Compile Include="CommonTables\010_Physical_Signaling_Code.cs" />
