add reference to m4dHART project

--- a/benchGUI/benchGUI.csproj
+++ b/benchGUI/benchGUI.csproj
@@ -40,6 +40,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\m4dHART\m4dHART\m4dHART.csproj" />
     <ProjectReference Include="..\WorkBench\WorkBench.csproj" />
   </ItemGroup>
   <ItemGroup>
