--- a/WBGUIWPF/WBGUIWPF.csproj
+++ b/WBGUIWPF/WBGUIWPF.csproj
@@ -8,6 +8,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Windows.Compatibility" Version="7.0.5" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\WorkBench\WorkBench.csproj" />
   </ItemGroup>
 
